@@ -1,5 +1,5 @@
 name=FastAccelStepper
-version=0.10.0
+version=0.11.0
 license=MIT
 author=Jochen Kiemes <jochen@kiemes.de>
 maintainer=Jochen Kiemes <jochen@kiemes.de>
